[metadata]
name = python-ctypescracklib
version = 1.00
author = Sean Reifschneider
author_email = jafo@tummy.com
summary = A ctypes wrapper around cracklib for checking passwords.
home_page = https://github.com/linsomniac/python-ctypescracklib

classifier = License :: Public Domain
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 2
    Intended Audience :: Developers

[files]
modules = ctypescracklib
extra_files = README

